Fixed Unfilled Gap on The Bottom For Desktop Users

--- a/CSS/galery.css
+++ b/CSS/galery.css
@@ -6,6 +6,7 @@ html, body {
 }
 main {
     margin: 4rem auto;
+    min-height: calc(100vh - 10rem);
 }
 .gallery{
     display: grid;
